--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Simple React Timer</title>
-</head>
-
+  </head>
 <body>
-   <div id ="app">
-   </div>
+<div id ="root"></div>
+  <!-- Load our React component. -->
+  <script src="./index.js"></script>
+
 </body>
-</html>
