--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Simple React Timer</title>
   </head>
 <body>
-<div id ="root"></div>
+<div id ="app"></div>
   <!-- Load our React component. -->
   <script src="./index.js"></script>
 
